# manifold

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: BuildAndTest.yml  Publish.yml
src/: config.rs  defaults.rs  error.rs  errors.rs  highlighter.rs  lib.rs  manifold.rs  normalizer.rs  split_and_apply.rs  style.rs
src/highlighter/: mod.rs  number.rs  quote.rs  uuid.rs
src/highlighters/: date_dash.rs  date_time.rs  ip_v4.rs  ip_v6.rs  json.rs  key_value.rs  keyword.rs  mod.rs  number.rs  pointer.rs  quote.rs  regex.rs  unix_path.rs  unix_process.rs  url.rs  uuid.rs
src/tests/: escape_code_converter.rs
tests/: integration_test.rs
