[package]
name = "inlet_manifold"
version = "0.1.0"
edition = "2021"
authors = ["Ben Sadeh"]
description = "A general purpose highlighting library"
repository = "https://github.com/bensadeh/manifold"
keywords = ["highlighting", "regex", "tailspin"]
license = "MIT"

[lib]
name = "inlet_manifold"
path = "src/lib.rs"

[lints.clippy]
missing-const-for-fn = "deny"

[dependencies]
nu-ansi-term = "0.50.1"
regex = "1.10.6"
serde_json = { version = "1.0.128", features = ["preserve_order"] }