[package]
name = "inlet_manifold"
version = "0.2.0"
edition = "2021"
authors = ["Ben Sadeh"]
description = "A general purpose highlighting library"
repository = "https://github.com/bensadeh/manifold"
keywords = ["highlighting", "regex", "tailspin"]
license = "MIT"

[lib]
name = "inlet_manifold"
path = "src/lib.rs"

[lints.clippy]
missing-const-for-fn = "deny"

[dependencies]
nu-ansi-term = "0.50.1"
regex = "1.11.1"
serde_json = { version = "1.0.134", features = ["preserve_order"] }
serde = { version = "1.0.217", features = ["derive"] }